  as variables as array keys, thanks to acecream for the help
+ Improved parsing of named parameters that can now be quoted
+ Added support for instance and static method calls white-listing in
  Dwoo_Security_Policy (see allowMethod()), this is hardly efficient
  though for instance calls since it has to do runtime checks so use
  it with caution
* Added $this->viewParam support to ZendFramework adapter through a
  Dwoo_Adapters_ZendFramework_Dwoo class that extends Dwoo, you should use
  this if you called setEngine() on the ZF view
* Fixed parsing of quoted keywords in if statements, like 'not' was
  parsed as ! because using {if not $foo} is valid, but it was impossible
  to use them even as string.
* Fixed parsing bug with method calls used as arguments with a comma
  following.
* Fixed parsing of function/constants that start with an underscore,
  thanks to Dominik del Bondio for the patch
* Adapters: Agavi: Added support for multiple plugin directories in the
  config, thanks to Mike Seth for the patch
* Fixed custom compilable plugins not being recognized as such

[2010-02-07] 1.1.1
+ Added {optional} plugin that just prints an optional var without any
  notice if it doesn't exist
+ Added Dwoo::setTemplate() for testing purposes mostly
* Fixed an {extends} parsing bug that prevented the use of single-quotes
  around the parent template's filename
* Fixed a security issue, if you didn't use a custom compiler factory but
  passed the compiler directly to the get method with autoEscape enabled,
  the autoEscape was disabled in included templates - Thanks to Fabien
  Potencier for notifying me.
* Fixed a bug in {safe} when using variable-variables it would sometimes
  corrupt the var name resulting in blank output
* Fixed a bug when accessing array indices that contain a minus sign, it
  is now possible to access those using {$var[index-foo]},
  {$var['index-foo']} or {$index="index-foo"} {$var[$index]}